assets/scss/03-organisms/_tab-container.scss
@mixin tabscroll {
  flex-wrap: nowrap;
  overflow-x: auto;
  -webkit-overflow-scrolling: touch;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  &::-webkit-scrollbar {
    display: none;
  }
}

.ma__tab-container {
  display: flex;
  flex-direction: column;

  &-head {
    display: inline-flex;
    margin-bottom: 0;
    @include tabscroll;
  }

  &-body {
    padding: 1rem;
    border: 1px solid $c-gray-light;
    margin-top: -1px;
  }

  .ma__tab-title {
    cursor: pointer;
    padding: 1.75rem 1.5rem 0.8rem 1.5rem;
    font-size: 1.25rem;
    background-color: unset;
    white-space: nowrap;
    border-left: 1px solid $c-gray-light;
    border-top: 1px solid $c-gray-light;
    border-right: none;
    margin-bottom: -1px;
    display: block;

    &:first-child {
      border-right: none;
      border-left-width: 1px;
    }

    &:last-child {
      border-right: 1px solid $c-gray-light;
    }

    &:focus {
      outline: none;
      border-top-color: $c-primary !important;
      border-left-color: $c-gray-light !important;
      border-bottom: none;
    }

    &--active {
      border-top: 5px solid $c-primary;
      padding-top: 1.5rem;
      font-weight: 700;
      color: $c-primary;
      background-color: white;
      z-index: 1;
    }
  }

  .ma__tab-container--nested {
    .ma__tab-container {
      &-head {
        border-bottom: 1px solid $c-gray-light;
      }

      &-body {
        border: none;
      }
    }

    .ma__tab-title {
      border: none;
      border-bottom: 5px solid;
      border-bottom-color: transparent;
      padding: 1.5rem 1.5rem 0.8rem 1.5rem;

      &--active {
        color: $c-primary;
        border-bottom: 5px solid $c-primary;
      }

      &:focus {
        outline: none;
        border-bottom-color: $c-primary !important;
      }
    }
  }
}

